src/test/deca/context/valid/created/object_decl6.deca
//Description :
// Vérification de la déclaration de méthode
//
// Resultats :
//


class Test {

    int x = 0;

    void setX(int x){
    this.x = x;
    }

    void affiche() {
        print("Yo : ", this.x);
    }
}

class SubTest{
Test t = new Test();
}

{

}
