src/test/deca/context/invalid/created/too_much_args.deca
//Description
//    Vérifier le mélange des noms
//
//Résultats :
//  4
//

class A{
  protected int a = 3;

  void printA(){
  print(this.a);
  }
}



{
A b = new A();
b.printA(4);
}
